# assemblytics

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  pr-preview.yml  publish.yml  test.yml
assemblytics/: between_alignments.py  cli.py  dot_prep.py  dotplot.py  index.py  nchart.py  summary.py  uniq_anchor.py  variant_charts.py  variants.py  within_alignment.py
example_data/arabidopsis/: Arabidopsis_example.Assemblytics_structural_variants.summary  Arabidopsis_example.Assemblytics_structural_variants.summary.csv  Arabidopsis_example.info.csv  Arabidopsis_example.oriented_coords.csv  Arabidopsis_example.ref.index  Arabidopsis_example.variants_between_alignments.bed
example_data/drosophila/: Drosophila_example.query.index  Drosophila_example.ref.index
example_data/human/: Human_NA12878_to_hg19.variants_within_alignments.bed
example_data/yeast/: Saccharomyces_cerevisiae_example.Assemblytics_structural_variants.summary.csv  Saccharomyces_cerevisiae_example.ref.index  Saccharomyces_cerevisiae_example.variants_between_alignments.bed  Saccharomyces_cerevisiae_example.variants_within_alignments.bed
input_examples/: Plasmodium_falciparum.delta  Saccharomyces_cerevisiae.l10000.delta
output_examples/arabidopsis/: Arabidopsis_example.Assemblytics_structural_variants.bed  Arabidopsis_example.query.index  Arabidopsis_example.variant_preview.txt  Arabidopsis_example.variants_within_alignments.bed
output_examples/drosophila/: Drosophila_example.Assemblytics_assembly_stats.txt  Drosophila_example.info.csv  Drosophila_example.oriented_coords.csv
output_examples/ecoli/: E__coli_example.info.csv  E__coli_example.oriented_coords.csv
output_examples/human/: Human_NA12878_to_hg19.Assemblytics_assembly_stats.txt  Human_NA12878_to_hg19.Assemblytics_structural_variants.bed  Human_NA12878_to_hg19.Assemblytics_structural_variants.summary  Human_NA12878_to_hg19.Assemblytics_structural_variants.summary.csv  Human_NA12878_to_hg19.info.csv  Human_NA12878_to_hg19.oriented_coords.csv  Human_NA12878_to_hg19.query.index  Human_NA12878_to_hg19.ref.index  Human_NA12878_to_hg19.variant_preview.txt  Human_NA12878_to_hg19.variants_between_alignments.bed
output_examples/yeast/: Saccharomyces_cerevisiae_example.Assemblytics_assembly_stats.txt  Saccharomyces_cerevisiae_example.Assemblytics_structural_variants.bed  Saccharomyces_cerevisiae_example.Assemblytics_structural_variants.summary  Saccharomyces_cerevisiae_example.info.csv  Saccharomyces_cerevisiae_example.query.index  Saccharomyces_cerevisiae_example.variant_preview.txt
packaging/bioconda/: meta.yaml
public/: assemblytics-2.0.0-py3-none-any.whl  assemblytics-2.0.1-py3-none-any.whl  index.html  pyodide_poc.html  worker.js
public/assemblytics/: cli.py
public/js/: light_dotplot.js
scripts/: Assemblytics  Assemblytics.py  Assemblytics_Nchart.py  Assemblytics_between_alignments.pl  Assemblytics_between_alignments.py  Assemblytics_dotplot.py  Assemblytics_index.py  Assemblytics_summary.py  Assemblytics_uniq_anchor.py  Assemblytics_variant_charts.py  Assemblytics_within_alignment.py
tests/: test_pipeline.py
tests/fixtures/ecoli/: assemblytics_coords.csv  assemblytics_dot.coords  assemblytics_dot.coords.idx
