[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assemblytics"
version = "2.0.1"
description = "Detect and analyze structural variants from a de novo genome assembly aligned to a reference genome"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Maria Nattestad" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://assemblytics.com/"
Repository = "https://github.com/MariaNattestad/assemblytics"

[project.scripts]
assemblytics = "assemblytics.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pylint"]

[tool.setuptools]
packages = ["assemblytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.format]
max-line-length = 250

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "trailing-whitespace",
    "wrong-import-order",
    "wrong-import-position",
    "import-outside-toplevel",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-positional-arguments",
    "too-many-arguments",
    "consider-using-f-string",
    "consider-using-with",
    "consider-using-dict-items",
    "unspecified-encoding",
    "duplicate-code",
    "bad-indentation",
    "redefined-outer-name",
    "chained-comparison",
    "broad-exception-caught",
]
